step 3 : implement the video search (from title keyword param) endpoint from controller to repository